fix vertical alignment

--- a/public/theme/default.css
+++ b/public/theme/default.css
@@ -57,6 +57,7 @@ table {
 table td,
 table th {
     padding: 4px 8px;
+    vertical-align: top;
 }
 
 table td:last-child {
